Perma /builds/worker/workspace/build/src/dom/html/HTMLMediaElement.cpp:2427:26: error: unused variable 't' [-Werror=unused-variable] when Gecko 70 merges to Beta on 2019-08-26
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | verified |
People
(Reporter: intermittent-bug-filer, Assigned: pehrsons)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: ccoroiu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=259314942&repo=try
Full log: https://queue.taskcluster.net/v1/task/RoXED5L5RqmGAb3P1Vdahg/runs/0/artifacts/public/logs/live_backing.log
task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - TEST-PASS | check_textrel | libfakeopenh264.so
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/gmp-plugin-openh264'
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/gmp-plugin-openh264'
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - chmod +x libfakeopenh264.so
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/gmp-plugin-openh264'
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/gmp-plugin-openh264'
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - ../../../config/nsinstall -R -m 644 'libfakeopenh264.so' '../../../dist/bin/gmp-fakeopenh264/1.0'
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/gmp-plugin-openh264'
[task 2019-08-01T02:25:59.847Z] 02:25:59 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/imagecapture'
[task 2019-08-01T02:25:59.848Z] 02:25:59 INFO - mkdir -p '.deps/'
[task 2019-08-01T02:25:59.848Z] 02:25:59 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/imagecapture'
[task 2019-08-01T02:25:59.850Z] 02:25:59 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/imagecapture'
[task 2019-08-01T02:25:59.850Z] 02:25:59 INFO - dom/media/imagecapture/Unified_cpp_media_imagecapture0.o
[task 2019-08-01T02:25:59.850Z] 02:25:59 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media/imagecapture'
[task 2019-08-01T02:26:00.214Z] 02:26:00 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:00.214Z] 02:26:00 INFO - /builds/worker/workspace/build/src/sccache/sccache /builds/worker/workspace/build/src/gcc/bin/g++ -o Unified_cpp_dom_media1.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DHAVE_UINT64_T -DWEBRTC_POSIX -DWEBRTC_BUILD_LIBEVENT -DWEBRTC_LINUX -DMOZILLA_INTERNAL_API -DTRACING -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/dom/media -I/builds/worker/workspace/build/src/obj-firefox/dom/media -I/builds/worker/workspace/build/src/caps -I/builds/worker/workspace/build/src/docshell/base -I/builds/worker/workspace/build/src/dom/base -I/builds/worker/workspace/build/src/layout/generic -I/builds/worker/workspace/build/src/layout/xul -I/builds/worker/workspace/build/src/media/libyuv/libyuv/include -I/builds/worker/workspace/build/src/netwerk/base -I/builds/worker/workspace/build/src/media/webrtc/signaling/src/common -I/builds/worker/workspace/build/src/media/webrtc/trunk -I/builds/worker/workspace/build/src/media/webrtc/trunk/webrtc -I/builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -I/builds/worker/workspace/build/src/ipc/chromium/src -I/builds/worker/workspace/build/src/ipc/glue -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fomit-frame-pointer -funwind-tables -Werror -Wno-error=shadow -Wno-error=attributes -Wno-error=shadow -MD -MP -MF .deps/Unified_cpp_dom_media1.o.pp /builds/worker/workspace/build/src/obj-firefox/dom/media/Unified_cpp_dom_media1.cpp
[task 2019-08-01T02:26:00.214Z] 02:26:00 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:00.214Z] 02:26:00 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:00.214Z] 02:26:00 INFO - dom/media/Unified_cpp_dom_media6.o
[task 2019-08-01T02:26:00.214Z] 02:26:00 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:01.241Z] 02:26:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:01.241Z] 02:26:01 INFO - /builds/worker/workspace/build/src/sccache/sccache /builds/worker/workspace/build/src/gcc/bin/g++ -o Unified_cpp_dom_media0.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DHAVE_UINT64_T -DWEBRTC_POSIX -DWEBRTC_BUILD_LIBEVENT -DWEBRTC_LINUX -DMOZILLA_INTERNAL_API -DTRACING -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/dom/media -I/builds/worker/workspace/build/src/obj-firefox/dom/media -I/builds/worker/workspace/build/src/caps -I/builds/worker/workspace/build/src/docshell/base -I/builds/worker/workspace/build/src/dom/base -I/builds/worker/workspace/build/src/layout/generic -I/builds/worker/workspace/build/src/layout/xul -I/builds/worker/workspace/build/src/media/libyuv/libyuv/include -I/builds/worker/workspace/build/src/netwerk/base -I/builds/worker/workspace/build/src/media/webrtc/signaling/src/common -I/builds/worker/workspace/build/src/media/webrtc/trunk -I/builds/worker/workspace/build/src/media/webrtc/trunk/webrtc -I/builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -I/builds/worker/workspace/build/src/ipc/chromium/src -I/builds/worker/workspace/build/src/ipc/glue -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fomit-frame-pointer -funwind-tables -Werror -Wno-error=shadow -Wno-error=attributes -Wno-error=shadow -MD -MP -MF .deps/Unified_cpp_dom_media0.o.pp /builds/worker/workspace/build/src/obj-firefox/dom/media/Unified_cpp_dom_media0.cpp
[task 2019-08-01T02:26:01.242Z] 02:26:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:01.242Z] 02:26:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:01.242Z] 02:26:01 INFO - dom/media/Unified_cpp_dom_media7.o
[task 2019-08-01T02:26:01.242Z] 02:26:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/media'
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/dom/html'
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - /builds/worker/workspace/build/src/sccache/sccache /builds/worker/workspace/build/src/gcc/bin/g++ -o Unified_cpp_dom_html2.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/stl_wrappers -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/worker/workspace/build/src/dom/html -I/builds/worker/workspace/build/src/obj-firefox/dom/html -I/builds/worker/workspace/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -I/builds/worker/workspace/build/src/ipc/chromium/src -I/builds/worker/workspace/build/src/ipc/glue -I/builds/worker/workspace/build/src/caps -I/builds/worker/workspace/build/src/docshell/base -I/builds/worker/workspace/build/src/dom/base -I/builds/worker/workspace/build/src/dom/canvas -I/builds/worker/workspace/build/src/dom/html/input -I/builds/worker/workspace/build/src/dom/media -I/builds/worker/workspace/build/src/dom/security -I/builds/worker/workspace/build/src/dom/xbl -I/builds/worker/workspace/build/src/dom/xul -I/builds/worker/workspace/build/src/image -I/builds/worker/workspace/build/src/layout/forms -I/builds/worker/workspace/build/src/layout/generic -I/builds/worker/workspace/build/src/layout/style -I/builds/worker/workspace/build/src/layout/tables -I/builds/worker/workspace/build/src/layout/xul -I/builds/worker/workspace/build/src/netwerk/base -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/mozilla-config.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fomit-frame-pointer -funwind-tables -Werror -Wno-error=shadow -MD -MP -MF .deps/Unified_cpp_dom_html2.o.pp /builds/worker/workspace/build/src/obj-firefox/dom/html/Unified_cpp_dom_html2.cpp
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - In file included from /builds/worker/workspace/build/src/obj-firefox/dom/html/Unified_cpp_dom_html2.cpp:11:0:
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - /builds/worker/workspace/build/src/dom/html/HTMLMediaElement.cpp: In member function 'void mozilla::dom::HTMLMediaElement::NotifyMediaTrackDisabled(mozilla::dom::MediaTrack*)':
[task 2019-08-01T02:26:01.298Z] 02:26:01 ERROR - /builds/worker/workspace/build/src/dom/html/HTMLMediaElement.cpp:2427:26: error: unused variable 't' [-Werror=unused-variable]
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - } else if (VideoTrack* t = aTrack->AsVideoTrack()) {
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - ^
[task 2019-08-01T02:26:01.298Z] 02:26:01 INFO - cc1plus: all warnings being treated as errors
[task 2019-08-01T02:26:01.299Z] 02:26:01 INFO - /builds/worker/workspace/build/src/config/rules.mk:786: recipe for target 'Unified_cpp_dom_html2.o' failed
[task 2019-08-01T02:26:01.299Z] 02:26:01 ERROR - make[4]: *** [Unified_cpp_dom_html2.o] Error 1
[task 2019-08-01T02:26:01.299Z] 02:26:01 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/dom/html'
[task 2019-08-01T02:26:01.299Z] 02:26:01 INFO - /builds/worker/workspace/build/src/config/recurse.mk:74: recipe for target 'dom/html/target' failed
[task 2019-08-01T02:26:01.299Z] 02:26:01 ERROR - make[3]: *** [dom/html/target] Error 2
[task 2019-08-01T02:26:01.299Z] 02:26:01 INFO - make[3]: *** Waiting for unfinished jobs....
Comment 1•6 years ago
|
||
[Tracking Requested - why for this release]:
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Updated•6 years ago
|
Comment 4•6 years ago
|
||
| bugherder | ||
Comment 5•6 years ago
|
||
No longer occurs in recent beta sims.
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Description
•