Bug 1570594 - Remove need for variable that's unused in release. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D40171

--HG--
extra : moz-landing-system : lando